--- a/static/form.html
+++ b/static/form.html
@@ -15,12 +15,28 @@
         </form>
     </li>
     <li>
+        <h3>/crop</h3>
+        <form method="POST" enctype="multipart/form-data" action="/crop">
+            image <input type="file" name="image" required>
+            topleft <input type="text" name="topleft">
+            bottomright <input type="text" name="bottomright">
+            <input type="submit" value="Upload">
+        </form>
+    </li>
+    <li>
         <h3>/overlay</h3>
         <form method="POST" enctype="multipart/form-data" action="/overlay">
             main <input type="file" name="main" required>
             overlay <input type="file" name="overlay" required>
             topleft <input type="text" name="topleft">
             bottomright <input type="text" name="bottomright">
+            <input type="submit" value="Upload">
+        </form>
+    </li>
+    <li>
+        <h3>/isopen</h3>
+        <form method="POST" enctype="multipart/form-data" action="/isopen">
+            image <input type="file" name="image" required>
             <input type="submit" value="Upload">
         </form>
     </li>
